# flashapi

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: authentication.md  custom-logic.md  customization.md  examples.md  features.md  framework-notes.md  integration.md  relations.md
examples/: fastapi_example.py  flask_example.py
src/flashapi/: __init__.py  django.py  fastapi.py  flask.py
src/flashapi/adapters/: base.py  django.py  fastapi.py  flask.py
src/flashapi/core/: __init__.py  custom_routes.py  pluralize.py  relations.py  response.py  schema.py  visibility.py
src/flashapi/docs/: openapi.py
src/flashapi/features/: __init__.py  audit.py  dashboard.py  export.py  filtering.py  pagination.py  rate_limit.py  search.py  sorting.py  webhooks.py
src/flashapi/inspectors/: __init__.py  base.py  dataclass.py  detect.py  django.py  pydantic.py  sqlalchemy.py
src/flashapi/storage/: __init__.py  auto.py  base.py  orm.py  sqlalchemy.py
tests/test_adapters/: test_fastapi.py  test_flask.py  test_relations.py  test_soft_delete.py
tests/test_core/: test_pluralize.py  test_response.py  test_schema.py  test_visibility.py
tests/test_features/: test_audit.py  test_dashboard.py  test_export.py  test_filtering.py  test_pagination.py  test_rate_limit.py  test_search.py  test_sorting.py
tests/test_inspectors/: test_dataclass.py  test_detect.py  test_pydantic.py
tests/test_storage/: test_auto.py
