[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-flashapi"
version = "0.1.2"
description = "Define your models. FlashAPI does the rest."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "FlashAPI Contributors" },
]
keywords = ["api", "rest", "crud", "fastapi", "django", "flask", "automatic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "pydantic>=2.0"]
django = ["django>=4.2"]
flask = ["flask>=2.3.0"]
all = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "django>=4.2", "flask>=2.3.0"]
dev = ["pytest>=7.0", "pytest-asyncio", "httpx", "ruff"]

[project.urls]
Homepage = "https://github.com/HackermanMe/flashapi"
Documentation = "https://github.com/HackermanMe/flashapi#readme"
Repository = "https://github.com/HackermanMe/flashapi"

[tool.hatch.build.targets.wheel]
packages = ["src/flashapi"]

[tool.ruff]
target-version = "py310"
line-length = 100
